2014-06-06  Steven Munroe  <sjmunroe@us.ibm.com>

	* ./src/Makefile.am: Add sasstringbtree_tt to TESTS.	
	* ./src/tests/sasstringbtree_tt.c: New file.

2014-06-10 Rajalakshmi Srinivasaraghavan <raji@linux.vnet.ibm.com>

	configure.ac: propagate LDFLAGS properly.
	configure: Regenerate.
	examples/Makefile.in: Likewise.
	src/Makefile.in: Likewise.
	aclocal.m4: Likewise.
	Makefile.in: Likewise.

2014-06-02 Rajalakshmi Srinivasaraghavan <raji@linux.vnet.ibm.com>

	* src/sasindexnode.h: Define LOCK_ON and LOCK_OFF.
	* src/sasstringbtree.cpp: Include stddef.h.
	(SASStringBTreePercentFree): Replace divide by power of 2 with
	__builtin_ctzl and shift right.
	(SASStringBTreePercentUsed): Likewise.
	(SASStringBTreeSpillAllocExtended): Add lock_on_t parm.
	Conditionally call SASLock/SASUnlock.
	(SASStringBTreeSpillAlloc): Add lock_on_t parm.
	Conditionally call SASLock/SASUnlock.
	(SASStringBTreeGetModCount_nolock):  New function.
	(SASStringBTreeGetMaxKey_nolock): Like wise.
	(SASStringBTreeGetMinKey_nolock): Like wise.
	(SASStringBTreeContainsKey_nolock): Like wise.
	(SASStringBTreeGet_nolock): Like wise.
	(SASStringBTreeIsEmpty_nolock): Like wise.
	(SASStringBTreePut_nolock): Like wise.
	(SASStringBTreeReplace_nolock): Like wise.
	(SASStringBTreeRemove_nolock): Like wise.
	(SASStringBTreePut): Update calls to SASStringBTreeNodeInsert()
	and SASStringBTreeNodeInitialize().
	(SASStringBTreeRemove):  Update call to SASStringBTreeNodeDelete().
	* src/sasstringbtree.h: Add comment.
	(SASStringBTreeGetModCount_nolock):  Declare with comment.
	(SASStringBTreeGetMaxKey_nolock): Declare with comment.
	(SASStringBTreeGetMinKey_nolock): Declare with comment.
	(SASStringBTreeContainsKey_nolock): Declare with comment.
	(SASStringBTreeGet_nolock): Declare with comment.
	(SASStringBTreeIsEmpty_nolock): Declare with comment.
	(SASStringBTreePut_nolock): Declare with comment.
	(SASStringBTreeReplace_nolock): Declare with comment.
	(SASStringBTreeRemove_nolock): Declare with comment.