@@ -2457,15 +2457,13 @@ lockfree_recycle_test (char *x4k, char *y4k)
 
 /* Fake out the SAS region range checking for these tests.
 */
-extern unsigned long memLow, memHigh;
 
 void
 setmemrange (unsigned long low, unsigned long high)
 {
     unsigned long	ak, bk;
 
-    memLow = low;
-    memHigh = high;
+    setSASmemrange (low, high);
 
     ak = getMemLow();
     bk = getMemHigh();
