@@ -5414,15 +5414,13 @@ lfpcqueue_stride_timestamp_test (char *x4k)
 
 /* Fake out the SAS region range checking for these tests.
 */
-extern unsigned long memLow, memHigh;
 
 void
 setmemrange (unsigned long low, unsigned long high)
 {
   unsigned long ak, bk;
 
-  memLow = low;
-  memHigh = high;
+  setSASmemrange (low, high);
 
   ak = getMemLow ();
   bk = getMemHigh ();
